hard-gists/735556/run.log
=== Docker Run Log for 735556 ===
Started at: Mi 29. Okt 17:05:41 CET 2025

[2025-10-29 17:05:41] START: Running container for 735556
[2025-10-29 17:05:42] SUCCESS: Container f2305c7251b67cfd8e44ce88c34c8fc6f2179273ecc35f667eddd69677ac88e5 started for 735556
=== Container logs for 735556 ===
  File "/snippet.py", line 27
    except defer.FirstError, e:
           ^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 735556 ===
[2025-10-29 17:05:44] INFO: Container f2305c7251b67cfd8e44ce88c34c8fc6f2179273ecc35f667eddd69677ac88e5 has stopped
